--- a/index.html
+++ b/index.html
@@ -744,14 +744,14 @@
 
     <div class="footer-last py-4">
       <div class="container text-center">
-        <span class="text-white">Copyright &copy; 2023 Sammedecom Nigeria Limited.</span>
+        <span class="text-white">Copyright &copy; 2023 Sammadecom Nigeria Limited.</span>
       </div>
     </div>
     
   </footer>
 
   <!-- Whatsapp Float -->
-  <a href="https://api.whatsapp.com/send?phone=2347032237143&text=Welcome%20to%20Sammedecom%20Nigeria%20Limited.%20How%20can%20we%20help%20you?" class="float" target="_blank">
+  <a href="https://api.whatsapp.com/send?phone=2347032237143&text=Welcome%20to%20Sammadecom%20Nigeria%20Limited.%20How%20can%20we%20help%20you?" class="float" target="_blank">
     <i class="fa fa-whatsapp my-float"></i>
 </a>
 
