green color change

--- a/index.html
+++ b/index.html
@@ -75,18 +75,23 @@
                         <div class="nav-bot"></div>
                     </div>
                 </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link" href="#" id="dropdownId1" aria-haspopup="true" aria-expanded="false">Services</a>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Services</a>
                     <div align="center" class="nav-bot-cover d-lg-block d-none">
                         <div class="nav-bot"></div>
                     </div>
-                    <div class="abs-dropicon d-lg-none">
+                    <!-- <div class="abs-dropicon d-lg-none">
                         <span class="fa fa-angle-right text-white" id="dropspan1" onclick="getdropdown(1)"></span>
                     </div>
                     <div class="dropdown-menu nav-drop text-capitalize animated fadeInUp" id="dropcontent1" aria-labelledby="dropdownId1">
                         <a class="dropdown-item" href="#">Dr Fish Flight</a>
                         <a class="dropdown-item" href="#">Fish Farming</a>
-                    </div>
+                        <a class="dropdown-item" href="#">Training</a>
+                        <a class="dropdown-item" href="#">Arpn not arp</a>
+                        <a class="dropdown-item" href="#">Fish investment</a>
+                        <a class="dropdown-item" href="#">Sales of feeds, jumbo & juvenile</a>
+                        <a class="dropdown-item" href="#">Sales of sweet dry smoke Cat fish, spice, crumbs and omega oil</a>
+                    </div> -->
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link" href="#" id="dropdownId2" aria-haspopup="true" aria-expanded="false">Products</a>
@@ -237,7 +242,7 @@
 
             <div class="col-md-6">
               <h1 class="text-poppins">About Us</h1>
-              <h3 class="text-tiltneon text-uppercase wow fadeInLeft" data-wow-duration="1500">SAMMADECOM NIGERIA LIMITED (DR FISH)</h3>
+              <h3 class="text-tiltneon text-uppercase wow fadeInLeft text-green" data-wow-duration="1500">SAMMADECOM NIGERIA LIMITED (DR FISH)</h3>
               <p class="site-text text-montserrat font-500 wow fadeInLeft" data-wow-duration="1500" data-wow-delay="0.2s">SAMMADECOM NIGERIA LIMITED (DR FISH) is an global business enterprise that deals with the farming(breeding) and sales of fish both in raw and processed forms. This enterprise also deals in the transportation of people and goods from one terminal to another.</p>
               <p class="site-text text-montserrat font-500 wow fadeInLeft" data-wow-duration="1500" data-wow-delay="0.5s">Over the years we have successfully gained recognition from the state and the country at large by receiving awards of excellence with respect to the standard of services rendered by us.</p>
 
@@ -310,7 +315,7 @@
             <div class="head-bot"></div>
         </div>
 
-        <div class="row">
+        <div class="row justify-content-center">
             
             <div class="col-md-4">
                 <div class="service-content mt-3 wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.2s">
@@ -364,6 +369,74 @@
                 </div>
             </div>
 
+            <div class="col-md-4">
+                <div class="service-content mt-3 wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.8s">
+                    <a href="#un" class="text-decoration-none">
+                    <img src="img/fish-service1.jpg" alt="fish-training-1" class="img img-service">
+                    <div class="overlay">
+                        <div class="container">
+                         <div class="service-textarea">
+                           <h4 class="text-white text-montserrat text-uppercase mb-2">Arpn not arp</h4>
+                           <hr style="color: white; border-top: 2px solid;">
+                           <a href="#un" class="btn btn-explore text-uppercase mt-2">Explore <i class="la la-long-arrow-right"></i></a>
+                         </div>
+                        </div>
+                     </div>
+                    </a>
+                </div>
+            </div>
+
+            <div class="col-md-4">
+                <div class="service-content mt-3 wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.8s">
+                    <a href="#un" class="text-decoration-none">
+                    <img src="img/fish-service2.png" alt="fish-training-1" class="img img-service">
+                    <div class="overlay">
+                        <div class="container">
+                         <div class="service-textarea">
+                           <h4 class="text-white text-montserrat text-uppercase mb-2">Fish investment</h4>
+                           <hr style="color: white; border-top: 2px solid;">
+                           <a href="#un" class="btn btn-explore text-uppercase mt-2">Explore <i class="la la-long-arrow-right"></i></a>
+                         </div>
+                        </div>
+                     </div>
+                    </a>
+                </div>
+            </div>
+
+            <div class="col-md-4">
+                <div class="service-content mt-3 wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.8s">
+                    <a href="#un" class="text-decoration-none">
+                    <img src="img/fish-service3.jpg" alt="fish-training-1" class="img img-service">
+                    <div class="overlay">
+                        <div class="container">
+                         <div class="service-textarea">
+                           <h4 class="text-white text-montserrat text-uppercase mb-2">Sales of feeds, jumbo & juvenile</h4>
+                           <hr style="color: white; border-top: 2px solid;">
+                           <a href="#un" class="btn btn-explore text-uppercase mt-2">Explore <i class="la la-long-arrow-right"></i></a>
+                         </div>
+                        </div>
+                     </div>
+                    </a>
+                </div>
+            </div>
+
+            <div class="col-md-4">
+                <div class="service-content mt-3 wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.8s">
+                    <a href="#un" class="text-decoration-none">
+                    <img src="img/fish-service4.jpg" alt="fish-training-1" class="img img-service">
+                    <div class="overlay">
+                        <div class="container">
+                         <div class="service-textarea last-service">
+                           <h4 class="text-white text-montserrat text-uppercase mb-2">Sales of sweet dry smoke Cat fish, spice, crumbs and omega oil</h4>
+                           <hr style="color: white; border-top: 2px solid;">
+                           <a href="#un" class="btn btn-explore text-uppercase mt-2">Explore <i class="la la-long-arrow-right"></i></a>
+                         </div>
+                        </div>
+                     </div>
+                    </a>
+                </div>
+            </div>
+
         </div>
 
     </section>
@@ -392,7 +465,7 @@
                     </div>
                     </div>
                     <div class="card-body text-center">
-                        <h4 class="card-title">Tilapia Fish Trainer</h4>
+                        <h4 class="card-title text-green">Tilapia Fish Trainer</h4>
                         <p class="card-text text-raleway">Prader four Tilapia fish from fresh water pond in the house of making headway towards the crowd for all my bla ...</p>
                     </div>
                 </div>
@@ -412,7 +485,7 @@
                      </div>
                      </div>
                      <div class="card-body text-center">
-                         <h4 class="card-title">Tilapia Fish Trainer</h4>
+                         <h4 class="card-title text-green">Tilapia Fish Trainer</h4>
                          <p class="card-text text-raleway">Prader four Tilapia fish from fresh water pond in the house of making headway towards the crowd for all my bla ...</p>
                      </div>
                  </div>
@@ -432,7 +505,7 @@
                      </div>
                      </div>
                      <div class="card-body text-center">
-                         <h4 class="card-title">Tilapia Fish Trainer</h4>
+                         <h4 class="card-title text-green">Tilapia Fish Trainer</h4>
                          <p class="card-text text-raleway">Prader four Tilapia fish from fresh water pond in the house of making headway towards the crowd for all my bla ...</p>
                      </div>
                  </div>
@@ -452,7 +525,7 @@
                      </div>
                      </div>
                      <div class="card-body text-center">
-                         <h4 class="card-title">Tilapia Fish Trainer</h4>
+                         <h4 class="card-title text-green">Tilapia Fish Trainer</h4>
                          <p class="card-text text-raleway">Prader four Tilapia fish from fresh water pond in the house of making headway towards the crowd for all my bla ...</p>
                      </div>
                  </div>
@@ -478,8 +551,8 @@
 
                     <div class="px-4">
                       <div align="center">
-                       <h2 class="text-center text-gold text-montserrat">Contact Us</h2>
-                       <div class="head-bot"></div>
+                       <h2 class="text-center text-white text-montserrat">Contact Us</h2>
+                       <div class="white-bot"></div>
                     </div>
 
                     <form action="" method="post">
