edited book button and upcoming events

--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
             </div>
 
             <div class="col-md-4">
-                <div class="service-content mt-3 wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.5s">
+                <div class="service-content mt-3 wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.4s">
                     <a href="#un" class="text-decoration-none">
                     <img src="img/fish-farming.jpg" alt="fish-farming" class="img img-service">
                     <div class="overlay">
@@ -353,7 +353,7 @@
             </div>
 
             <div class="col-md-4">
-                <div class="service-content mt-3 wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.8s">
+                <div class="service-content mt-3 wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.6s">
                     <a href="#un" class="text-decoration-none">
                     <img src="img/fish-training-2.jpg" alt="fish-training-1" class="img img-service">
                     <div class="overlay">
@@ -370,7 +370,7 @@
             </div>
 
             <div class="col-md-4">
-                <div class="service-content mt-3 wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.8s">
+                <div class="service-content mt-3 wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.2s">
                     <a href="#un" class="text-decoration-none">
                     <img src="img/fish-service1.jpg" alt="fish-training-1" class="img img-service">
                     <div class="overlay">
@@ -387,7 +387,7 @@
             </div>
 
             <div class="col-md-4">
-                <div class="service-content mt-3 wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.8s">
+                <div class="service-content mt-3 wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.4s">
                     <a href="#un" class="text-decoration-none">
                     <img src="img/fish-service2.png" alt="fish-training-1" class="img img-service">
                     <div class="overlay">
@@ -404,7 +404,7 @@
             </div>
 
             <div class="col-md-4">
-                <div class="service-content mt-3 wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.8s">
+                <div class="service-content mt-3 wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.6s">
                     <a href="#un" class="text-decoration-none">
                     <img src="img/fish-service3.jpg" alt="fish-training-1" class="img img-service">
                     <div class="overlay">
@@ -421,7 +421,7 @@
             </div>
 
             <div class="col-md-4">
-                <div class="service-content mt-3 wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.8s">
+                <div class="service-content mt-3 wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.2s">
                     <a href="#un" class="text-decoration-none">
                     <img src="img/fish-service4.jpg" alt="fish-training-1" class="img img-service">
                     <div class="overlay">
@@ -631,9 +631,9 @@
 
             <div class="product-content">
                 <a href="#un" class="text-black text-decoration-none">
-                   <div class="card product-card">
+                   <div class="card border-0">
                       <img src="img/event-pic.jpg" alt="event-pic" class="img card-img-top img-thumbnail border-0">
-                      <div class="card-body">
+                      <div class="card-body text-center">
                       <h4 class="event-head">Tilapia Fish Trainer</h4>
                       <p class="text-raleway event-text">Prader four Tilapia fish from fresh water pond in the house of making headway towards the crowd for all my bla ...</p>
                       <a href="#Un" class="btn btn-read text-opensans">Read More <i class="fa fa-angle-double-right"></i></a>
@@ -644,9 +644,9 @@
 
             <div class="product-content">
                 <a href="#un" class="text-black text-decoration-none">
-                   <div class="card product-card">
+                   <div class="card border-0">
                       <img src="img/event-pic.jpg" alt="event-pic" class="img card-img-top img-thumbnail border-0">
-                      <div class="card-body">
+                      <div class="card-body text-center">
                       <h4 class="event-head">Tilapia Fish Trainer</h4>
                       <p class="text-raleway event-text">Prader four Tilapia fish from fresh water pond in the house of making headway towards the crowd for all my bla ...</p>
                       <a href="#Un" class="btn btn-read text-opensans">Read More <i class="fa fa-angle-double-right"></i></a>
@@ -657,9 +657,9 @@
 
             <div class="product-content">
                 <a href="#un" class="text-black text-decoration-none">
-                   <div class="card product-card">
+                   <div class="card border-0">
                       <img src="img/event-pic.jpg" alt="event-pic" class="img card-img-top img-thumbnail border-0">
-                      <div class="card-body">
+                      <div class="card-body text-center">
                       <h4 class="event-head">Tilapia Fish Trainer</h4>
                       <p class="text-raleway event-text">Prader four Tilapia fish from fresh water pond in the house of making headway towards the crowd for all my bla ...</p>
                       <a href="#Un" class="btn btn-read text-opensans">Read More <i class="fa fa-angle-double-right"></i></a>
@@ -670,9 +670,9 @@
 
             <div class="product-content">
                 <a href="#un" class="text-black text-decoration-none">
-                   <div class="card product-card">
+                   <div class="card border-0">
                       <img src="img/event-pic.jpg" alt="event-pic" class="img card-img-top img-thumbnail border-0">
-                      <div class="card-body">
+                      <div class="card-body text-center">
                       <h4 class="event-head">Tilapia Fish Trainer</h4>
                       <p class="text-raleway event-text">Prader four Tilapia fish from fresh water pond in the house of making headway towards the crowd for all my bla ...</p>
                       <a href="#Un" class="btn btn-read text-opensans">Read More <i class="fa fa-angle-double-right"></i></a>
