edited home page

--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
         <div class="offcanvas-body">
             <ul class="navbar-nav justify-content-start flex-grow-1 pe-3 text-oswald">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Home</a>
+                    <a class="nav-link" href="index.html">Home</a>
                     <div align="center" class="nav-bot-cover d-lg-block d-none">
                         <div class="nav-bot"></div>
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
+                    <a class="nav-link" href="about.html">About</a>
                     <div align="center" class="nav-bot-cover d-lg-block d-none">
                         <div class="nav-bot"></div>
                     </div>
@@ -102,8 +102,8 @@
                         <span class="fa fa-angle-right text-white" id="dropspan2" onclick="getdropdown(2)"></span>
                     </div>
                     <div class="dropdown-menu nav-drop text-capitalize animated fadeInUp" id="dropcontent2" aria-labelledby="dropdownId2">
-                        <a class="dropdown-item" href="#">Action 1</a>
-                        <a class="dropdown-item" href="#">Action 2</a>
+                        <a class="dropdown-item" href="#">Category 1</a>
+                        <a class="dropdown-item" href="#">Category 2</a>
                     </div>
                 </li>
                 <li class="nav-item">
@@ -275,7 +275,7 @@
                     <div class="py-4">
                     <h1 class="text-center text-gold text-pacifico mb-3">Meet Dr Fish</h1>
                     <p class="text-white">
-                        Mr Adedunji Samuel Oluwaseun Oluwaseyi Adebanjo, arp,f. dss (Dr. Fish) was born in the late seventies at Iyeku Odo-otin Osun State.
+                        Mr Adedunji Samuel Oluwaseun Oluwaseyi Adebanjo, arpn,f. dss (Dr. Fish) was born in the late seventies at Iyeku Odo-otin Osun State.
                         He is a livestock management consultant per excellence with over ten years of contributing to the nations's food security and human empowerment through aquaculture precisely fish farming and management.
                         Organizing adequate empowerment programs and seminars for locals of northern Nigeria and also creating rooms for investment plans for organizations and individuals.
                         He positively influenced the fish market on all angels of aquaculture, with no doubt a people person, passionate teacher, creative and ready to share knowledge thereby developing other; a determined goal better.
@@ -369,7 +369,7 @@
                 </div>
             </div>
 
-            <div class="col-md-4">
+            <!-- <div class="col-md-4">
                 <div class="service-content mt-3 wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.2s">
                     <a href="#un" class="text-decoration-none">
                     <img src="img/fish-service1.jpg" alt="fish-training-1" class="img img-service">
@@ -384,7 +384,7 @@
                      </div>
                     </a>
                 </div>
-            </div>
+            </div> -->
 
             <div class="col-md-4">
                 <div class="service-content mt-3 wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.4s">
