added about us and team pictures

--- a/about.html
+++ b/about.html
@@ -240,10 +240,82 @@
 
         <section class="team-area">
 
+            <div class="container">
+
             <div align="center" class="hover-header">
                 <h2 class="text-uppercase text-oswald">Meet Our Team</h2>
                 <div class="head-bot"></div>
             </div>
+
+            <div class="row justify-content-center">
+
+                <div class="col-md-4 col-sm-6 order-md-2 order-sm-1">
+                    <div class="team-content wow fadeIn" data-wow-duration="2000">
+                        <img src="img/sam-drfish.png" alt="sam-drfish" class="img img-fluid">
+                        <div class="team-text text-center mt-3">
+                            <h5 class="text-poppins text-green font-600">MR ADETUNJI S. ADEBANJO arpn. f.dss</h5>
+                            <p class="text-raleway font-600">MD/CEO Sammadecom Nig. Ltd. <br>(DR FISH)</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4 col-sm-6 order-md-1 order-sm-2">
+                    <div class="team-content with-mt wow fadeIn" data-wow-duration="2000">
+                        <img src="img/team-woman-1.jpg" alt="sam-drfish" class="img img-fluid">
+                        <div class="team-text text-center mt-3">
+                            <h5 class="text-poppins text-green font-600">MRS ADETUNJI G. KYESWAL</h5>
+                            <p class="text-raleway font-600">Internal Auditor</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4 col-sm-6 order-md-3 order-sm-3">
+                    <div class="team-content with-mt wow fadeIn" data-wow-duration="2000">
+                        <img src="img/team-woman2.jpg" alt="sam-drfish" class="img img-fluid">
+                        <div class="team-text text-center mt-3">
+                            <h5 class="text-poppins text-green font-600">MISS. IFEOMA MICHEAL</h5>
+                            <p class="text-raleway font-600">Business Manager</p>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="row justify-content-center">
+
+                <div class="col-md-4 col-sm-6">
+                    <div class="team-content wow fadeIn" data-wow-duration="2000">
+                        <img src="img/team-woman-3.png" alt="sam-drfish" class="img img-fluid">
+                        <div class="team-text text-center mt-3">
+                            <h5 class="text-poppins text-green font-600">MRS OLAWALE OLUWATOSIN</h5>
+                            <p class="text-raleway font-600">Head of Account</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4 col-sm-6">
+                    <div class="team-content wow fadeIn" data-wow-duration="2000">
+                        <img src="img/team-man-1.jpg" alt="sam-drfish" class="img img-fluid">
+                        <div class="team-text text-center mt-3">
+                            <h5 class="text-poppins text-green font-600">MR ROTIMI GABRIEL</h5>
+                            <p class="text-raleway font-600">Head of Media</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4 col-sm-6">
+                    <div class="team-content wow fadeIn" data-wow-duration="2000">
+                        <img src="img/team-man-2.jpg" alt="sam-drfish" class="img img-fluid">
+                        <div class="team-text text-center mt-3">
+                            <h5 class="text-poppins text-green font-600">DR ALI ANDESIKUTEB Y.</h5>
+                            <p class="text-raleway font-600">Company Adviser</p>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
 
         </section>
 
