added services page

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Services</a>
+                    <a class="nav-link" href="services.html">Services</a>
                     <div align="center" class="nav-bot-cover d-lg-block d-none">
                         <div class="nav-bot"></div>
                     </div>
@@ -387,7 +387,7 @@
             </div> -->
 
             <div class="col-md-4">
-                <div class="service-content mt-3 wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.4s">
+                <div class="service-content mt-3 wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.2s">
                     <a href="#un" class="text-decoration-none">
                     <img src="img/fish-service2.png" alt="fish-training-1" class="img img-service">
                     <div class="overlay">
@@ -404,7 +404,7 @@
             </div>
 
             <div class="col-md-4">
-                <div class="service-content mt-3 wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.6s">
+                <div class="service-content mt-3 wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.4s">
                     <a href="#un" class="text-decoration-none">
                     <img src="img/fish-service3.jpg" alt="fish-training-1" class="img img-service">
                     <div class="overlay">
@@ -421,7 +421,7 @@
             </div>
 
             <div class="col-md-4">
-                <div class="service-content mt-3 wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.2s">
+                <div class="service-content mt-3 wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.6s">
                     <a href="#un" class="text-decoration-none">
                     <img src="img/fish-service4.jpg" alt="fish-training-1" class="img img-service">
                     <div class="overlay">
