removed product tab and changed color

--- a/products.html
+++ b/products.html
@@ -107,7 +107,7 @@
                       </div>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link" href="#">Events</a>
+                      <a class="nav-link" href="events.html">Events</a>
                       <div align="center" class="nav-bot-cover d-lg-block d-none">
                           <div class="nav-bot"></div>
                       </div>
