--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                         <a class="dropdown-item" href="#">Sales of sweet dry smoke Cat fish, spice, crumbs and omega oil</a>
                     </div> -->
                 </li>
-                <li class="nav-item dropdown">
+                <!-- <li class="nav-item dropdown">
                     <a class="nav-link" href="products.html" id="dropdownId2" aria-haspopup="true" aria-expanded="false">Products</a>
                     <div align="center" class="nav-bot-cover d-lg-block d-none">
                         <div class="nav-bot"></div>
@@ -105,9 +105,9 @@
                         <a class="dropdown-item" href="#">Category 1</a>
                         <a class="dropdown-item" href="#">Category 2</a>
                     </div>
-                </li>
+                </li> -->
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Events</a>
+                    <a class="nav-link" href="events.html">Events</a>
                     <div align="center" class="nav-bot-cover d-lg-block d-none">
                         <div class="nav-bot"></div>
                     </div>
@@ -273,7 +273,7 @@
 
                 <div class="container">
                     <div class="py-4">
-                    <h1 class="text-center text-gold text-pacifico mb-3">Meet Dr Fish</h1>
+                    <h1 class="text-center dr-text text-pacifico mb-3">Meet Dr Fish</h1>
                     <p class="text-white">
                         Mr Adedunji Samuel Oluwaseun Oluwaseyi Adebanjo, arpn,f. dss (Dr. Fish) was born in the late seventies at Iyeku Odo-otin Osun State.
                         He is a livestock management consultant per excellence with over ten years of contributing to the nations's food security and human empowerment through aquaculture precisely fish farming and management.
@@ -442,7 +442,7 @@
     </section>
 
 
-    <section class="product-area container">
+    <!-- <section class="product-area container">
 
         <div align="center" class="hover-header">
             <h2 class="text-uppercase text-oswald">Products</h2>
@@ -459,7 +459,6 @@
                     <img class="card-img-top img-thumbnail img-card border-0" src="img/fish-prod1.jpg" alt="Title">
                     <div class="card-over">
                         <div class="middle">
-                            <!-- <a href="#un" class="btn btn-request position-relative"></a> -->
                             <button class="btn btn-request position-relative"><i class="fa fa-phone la-2x"></i></button>
                         </div>
                     </div>
@@ -479,7 +478,6 @@
                      <img class="card-img-top img-thumbnail img-card border-0" src="img/fish-prod1.jpg" alt="Title">
                      <div class="card-over">
                          <div class="middle">
-                             <!-- <a href="#un" class="btn btn-request position-relative"></a> -->
                              <button class="btn btn-request position-relative"><i class="fa fa-phone la-2x"></i></button>
                          </div>
                      </div>
@@ -499,7 +497,6 @@
                      <img class="card-img-top img-thumbnail img-card border-0" src="img/fish-prod1.jpg" alt="Title">
                      <div class="card-over">
                          <div class="middle">
-                             <!-- <a href="#un" class="btn btn-request position-relative"></a> -->
                              <button class="btn btn-request position-relative"><i class="fa fa-phone la-2x"></i></button>
                          </div>
                      </div>
@@ -519,7 +516,6 @@
                      <img class="card-img-top img-thumbnail img-card border-0" src="img/fish-prod1.jpg" alt="Title">
                      <div class="card-over">
                          <div class="middle">
-                             <!-- <a href="#un" class="btn btn-request position-relative"></a> -->
                              <button class="btn btn-request position-relative"><i class="fa fa-phone la-2x"></i></button>
                          </div>
                      </div>
@@ -539,7 +535,7 @@
             <a href="#un" class="btn btn-more">See More Products <i class="la la-long-arrow-right"></i></a>
         </div>
 
-    </section>
+    </section> -->
 
     <section class="contact-area">
 
@@ -794,7 +790,7 @@
                 <li><a href="#un">Home</a></li>
                 <li><a href="#un">About</a></li>
                 <li><a href="#un">Services</a></li>
-                <li><a href="#un">Products</a></li>
+                <!-- <li><a href="#un">Products</a></li> -->
                 <li><a href="#un">Events</a></li>
                 <li><a href="#un">Gallery</a></li>
                 <li><a href="#un">Contact</a></li>
